--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header.hero {
-  background-color: #161b22;
+  background-color: #4f41a9;
   padding: 100px 20px;
   text-align: center;
   border-bottom: 2px solid #30363d;
