--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header.hero {
-  background-color: #d2a8ff;
+  background-color: #9057cd;
   padding: 100px 20px;
   text-align: center;
   border-bottom: 2px solid #30363d;
